syntax = "proto3";

package pb;

option go_package="IMChat/pb";

message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message LoginUserResponse {
    string token = 1;
}